# whir

./: Cargo.toml  README.md  Rocket.toml
src/: index.html  main.rs
