[package]
name = "whir"
description="fully self-contained speed test server"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/duckinator/whir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
